--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -29,6 +29,23 @@
         <!-- android:drawableLeft="@drawable/icon_phone"
         android:textStyle="bold|italic"-->
 
+    <ToggleButton
+        android:id="@+id/vegetables"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:drawableTop="@drawable/fruit_on_off"
+        android:gravity="center_vertical"
+        android:textOn="Овощи"
+        android:textOff="Овощи"
+        android:textSize="16dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_alignBottom="@+id/fruit"
+        android:layout_centerHorizontal="true" />
+
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
@@ -39,23 +56,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/fruit"
         android:layout_alignEnd="@+id/fruit" />
-
-    <ToggleButton
-        android:id="@+id/toggleButton"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/button_background"
-        android:drawableTop="@drawable/fruit_on_off"
-        android:gravity="center_vertical"
-        android:textOn="Фрукты"
-        android:textOff="Фрукты"
-        android:textSize="16dp"
-        android:textAlignment="center"
-        android:textColor="@color/color"
-        android:onClick="onToggleButtonClick"
-        android:checked="false"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
