--- a/CW/app/src/main/res/layout/vegetables.xml
+++ b/CW/app/src/main/res/layout/vegetables.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@drawable/background1"
+    android:background="@drawable/background"
     android:tileMode="repeat">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,30 +11,30 @@
         android:fillViewport="true"
         >
         <ToggleButton
-            android:id="@+id/f_1"
+            android:id="@+id/v_1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_ananas"
+            android:drawableTop="@drawable/veg_eggplant"
             android:gravity="center_vertical"
-            android:textOn="Ананас"
-            android:textOff="Ананас"
+            android:textOn="Баклажан"
+            android:textOff="Баклажан"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-             />
+            />
 
         <ToggleButton
-            android:id="@+id/f_2"
+            android:id="@+id/v_2"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_orange"
+            android:drawableTop="@drawable/veg_peas"
             android:gravity="center_vertical"
-            android:textOn="Апельсин"
-            android:textOff="Апельсин"
+            android:textOn="Горох"
+            android:textOff="Горох"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -43,14 +43,14 @@
             android:layout_centerHorizontal="true" />
 
         <ToggleButton
-            android:id="@+id/f_3"
+            android:id="@+id/v_3"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_banana"
+            android:drawableTop="@drawable/veg_squash"
             android:gravity="center_vertical"
-            android:textOn="Банан"
-            android:textOff="Банан"
+            android:textOn="Кабачек"
+            android:textOff="Кабачек"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -59,167 +59,129 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-        <ToggleButton
-            android:id="@+id/f_4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_grape"
-            android:gravity="center_vertical"
-            android:textOn="Виноград"
-            android:textOff="Виноград"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_below="@+id/f_1"
-            android:layout_alignLeft="@+id/f_1"
-            android:layout_alignStart="@+id/f_1"
-            android:layout_marginTop="35dp" />
 
         <ToggleButton
-            android:id="@+id/f_5"
+            android:id="@+id/v_4"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_dried_apricot"
+            android:drawableTop="@drawable/veg_cabbage"
             android:gravity="center_vertical"
-            android:textOn="Курага"
-            android:textOff="Курага"
+            android:textOn="Капуста"
+            android:textOff="Капуста"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/f_4"
-            android:layout_alignLeft="@+id/f_2"
-            android:layout_alignStart="@+id/f_2" />
-
-        <ToggleButton
-            android:id="@+id/f_6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_lemon"
-            android:gravity="center_vertical"
-            android:textOn="Лимон"
-            android:textOff="Лимон"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_alignTop="@+id/f_5"
-            android:layout_alignLeft="@+id/f_3"
-            android:layout_alignStart="@+id/f_3" />
-
-        <ToggleButton
-            android:id="@+id/f_7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
-            android:gravity="center_vertical"
-            android:textOn="Мандарин"
-            android:textOff="Мандарин"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_below="@+id/f_4"
+            android:layout_below="@+id/v_1"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="35dp" />
 
         <ToggleButton
-            android:id="@+id/f_8"
+            android:id="@+id/v_5"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_peache"
+            android:drawableTop="@drawable/veg_potato"
             android:gravity="center_vertical"
-            android:textOn="Персик"
-            android:textOff="Персик"
+            android:textOn="Картошка"
+            android:textOff="Картошка"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/f_7"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignTop="@+id/v_4"
+            android:layout_alignLeft="@+id/v_2"
+            android:layout_alignStart="@+id/v_2" />
 
         <ToggleButton
-            android:id="@+id/f_9"
+            android:id="@+id/v_6"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_plum"
+            android:drawableTop="@drawable/veg_corn"
             android:gravity="center_vertical"
-            android:textOn="Слива"
-            android:textOff="Слива"
+            android:textOn="Кукуруза"
+            android:textOff="Кукуруза"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/f_8"
+            android:layout_alignTop="@+id/v_5"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-
-
         <ToggleButton
-            android:id="@+id/f_10"
+            android:id="@+id/v_7"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_chernosliv"
+            android:drawableTop="@drawable/veg_bow"
             android:gravity="center_vertical"
-            android:textOn="Чернослив"
-            android:textOff="Чернослив"
-            android:textSize="13dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_below="@+id/f_7"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="60dp" />
-
-        <ToggleButton
-            android:id="@+id/f_11"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_apple"
-            android:gravity="center_vertical"
-            android:textOn="Яблоко"
-            android:textOff="Яблоко"
+            android:textOn="Лук"
+            android:textOff="Лук"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignLeft="@+id/f_9"
-            android:layout_alignStart="@+id/f_9"
-            android:layout_alignTop="@+id/f_10" />
+            android:layout_below="@+id/v_4"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
 
+        <ToggleButton
+            android:id="@+id/v_8"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_carrot"
+            android:gravity="center_vertical"
+            android:textOn="Морковь"
+            android:textOff="Морковь"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/v_5"
+            android:layout_alignLeft="@+id/v_5"
+            android:layout_alignStart="@+id/v_5"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/v_9"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_cucumber"
+            android:gravity="center_vertical"
+            android:textOn="Огурец"
+            android:textOff="Огурец"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/v_6"
+            android:layout_alignLeft="@+id/v_6"
+            android:layout_alignStart="@+id/v_6"
+            android:layout_marginTop="35dp" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="150dp"
             android:layout_height="70dp"
             android:text="Назад"
-            android:id="@+id/f_button_back"
+            android:id="@+id/v_button_back"
             android:onClick="onClick"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="600dp" />
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 
