--- a/CW/app/src/main/res/layout/vegetables.xml
+++ b/CW/app/src/main/res/layout/vegetables.xml
@@ -10,6 +10,22 @@
         android:layout_height="wrap_content"
         android:fillViewport="true"
         >
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="70dp"
+            android:text="Назад"
+            android:id="@+id/v_button_back"
+            android:onClick="onClick"
+            android:layout_alignParentTop="tr"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentEnd="false"
+            android:background="#1127ed"
+
+            android:focusable="false" />
+
         <ToggleButton
             android:id="@+id/v_1"
             android:layout_width="100dp"
@@ -24,7 +40,7 @@
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            />
+            android:layout_marginTop="80dp" />
 
         <ToggleButton
             android:id="@+id/v_2"
@@ -40,7 +56,8 @@
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="80dp" />
 
         <ToggleButton
             android:id="@+id/v_3"
@@ -56,8 +73,9 @@
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_above="@+id/v_4"
+            android:layout_alignLeft="@+id/v_6"
+            android:layout_alignStart="@+id/v_6" />
 
 
         <ToggleButton
@@ -172,16 +190,124 @@
             android:layout_alignStart="@+id/v_6"
             android:layout_marginTop="35dp" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="150dp"
-            android:layout_height="70dp"
-            android:text="Назад"
-            android:id="@+id/v_button_back"
-            android:onClick="onClick"
-            android:layout_alignParentBottom="true"
+        <ToggleButton
+            android:id="@+id/v_10"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_pepper"
+            android:gravity="center_vertical"
+            android:textOn="Перец"
+            android:textOff="Перец"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/v_7"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/v_11"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_tomato"
+            android:gravity="center_vertical"
+            android:textOn="Помидор"
+            android:textOff="Помидор"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/v_10"
+            android:layout_alignLeft="@+id/v_8"
+            android:layout_alignStart="@+id/v_8" />
+
+        <ToggleButton
+            android:id="@+id/v_12"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_radish"
+            android:gravity="center_vertical"
+            android:textOn="Редис"
+            android:textOff="Редис"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignBottom="@+id/v_11"
+            android:layout_alignLeft="@+id/v_9"
+            android:layout_alignStart="@+id/v_9" />
+
+        <ToggleButton
+            android:id="@+id/v_13"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_beet"
+            android:gravity="center_vertical"
+            android:textOn="Свекла"
+            android:textOff="Свекла"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/v_10"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/v_15"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_garlic"
+            android:gravity="center_vertical"
+            android:textOn="Чеснок"
+            android:textOff="Чеснок"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/v_13"
+            android:layout_alignLeft="@+id/v_12"
+            android:layout_alignStart="@+id/v_12" />
+
+        <ToggleButton
+            android:id="@+id/v_14"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/veg_bean"
+            android:gravity="center_vertical"
+            android:textOn="Фасоль"
+            android:textOff="Фасоль"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/v_13"
+            android:layout_alignLeft="@+id/v_11"
+            android:layout_alignStart="@+id/v_11" />
+
+        <ImageView
+            android:layout_width="400dp"
+            android:layout_height="70dp"
+            android:id="@+id/imageView"
+            android:layout_below="@+id/v_13"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
 
     </RelativeLayout>
 
