Add client and server.

--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Далее"
-        android:id="@+id/button"
+        android:id="@+id/next"
         android:onClick="onClick"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/fruit"
